# win_subst

./: Cargo.toml  README.md
src/: lib.rs
